# varj

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENCE-MIT  README.md
.github/: codecov.yml
.github/workflows/: release.yml  rust.yml  tests.yml
examples/: basic.rs  conversion.rs  json.rs
src/: lib.rs
tests/: simple.rs
